syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.gov.serpro.siconv.med.grpc";
option java_outer_classname = "HealthProto";

package br.gov.serpro.siconv.med.grpc;

message HealthCheckRequest {
  string service = 1;
}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
}

service Health {
  rpc Check(HealthCheckRequest) returns (HealthCheckResponse);
  rpc Ready(HealthCheckRequest) returns (HealthCheckResponse);
}